# tabby

./: .gitignore  CHANGELOG.zh-CN.md  COMPILATION_FIX_FINAL.md  COMPILATION_FIX_STATUS.md  COMPILATION_FIX_SUMMARY.md  Cargo.toml  Makefile  README.md  chat_service.pid  complete_api_diagnosis.sh  database_schema.md  fix_compilation_summary.sh  fix_compile.sh  quick_api_fix.sh  restart_with_ee_features.sh  simple_compile_test.sh  start_chat_service.sh  start_zsh.sh  status_chat_service.sh  stop_chat_service.sh  tabby.sqlite-shm  tabby.sqlite-wal  test_chat_service.sh  test_compile.sh  test_final_compile.sh  test_final_fix.sh  test_fixes.sh  test_index_api.sh  test_migration.sh  test_model_configuration_api.sh  test_route_fix.sh  test_startup_fix.sh  test_swagger_api_docs.sh  test_swagger_fix.sh  test_test_case_api.sh  update_refs.sh  测试用例生成API测试报告.md
.cursor/rules/: api-endpoints.mdc  cli-tools.mdc  configuration.mdc  makefile-commands.mdc  project-structure.mdc
crates/llama-cpp-server/: build.rs
crates/tabby/: Cargo.toml
crates/tabby-index-cli/: README.md
crates/tabby-server/: Cargo.toml
crates/tabby-server/src/: main.rs
crates/tabby-server/src/api/: index.rs  user.rs
crates/tabby-test-agent/: Cargo.toml  README.md  config.toml
crates/trpc-test-generator/: Cargo.toml  README.md
crates/trpc-test-generator/src/: main.rs
crates/trpc-test-generator/src/agent/: completion.rs  mod.rs  trpc_analyzer.rs
crates/trpc-test-generator/src/generator/: go_templates.rs  mod.rs  test_generator.rs
crates/trpc-test-generator/src/types/: mod.rs
crates/trpc-test-generator/src/validator/: mod.rs
docs/all/: DEVELOPMENT.md  README-zh.md  (+6 more)
test_project/: Cargo.toml
(+52 files in other folders)
