[package]
name = "tabby-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tabby-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
tempfile = "3.8"
walkdir = "2.4"
glob = "0.3"
tantivy = "0.22"
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
argon2 = "0.5"

# 引用企业版数据库模块
tabby-db = { path = "../../ee/tabby-db" }